--- a/src/stylus/body.styl
+++ b/src/stylus/body.styl
@@ -2,8 +2,11 @@ body
   webfont()
   background var(--background)
   display grid
+  grid-template-areas:
+    'header'\
+    'main'
   grid-template-columns 1fr
-  grid-template-rows var(--header-height) 1fr var(--footer-height)
+  grid-template-rows var(--header-height) 1fr
   min-height 100vh // fallback
   min-height calc(var(--vh, 1vh) * 100)
   transition background transition, color transition
