--- a/src/stylus/header.styl
+++ b/src/stylus/header.styl
@@ -1,7 +1,8 @@
 header
+  backdrop-filter blur(10px)
   background var(--header-background)
-  border-bottom 1px solid var(--border)
   color var(--text)
+  grid-area header
   padding 0 env(safe-area-inset-right) 0 env(safe-area-inset-left)
   position sticky
   top 0
