nudges color-picker alignment

--- a/src/js/custom_elements/color_picker/color_picker.styl
+++ b/src/js/custom_elements/color_picker/color_picker.styl
@@ -10,6 +10,7 @@ color-picker > button
   display flex
   height var(--header-height)
   justify-content center
+  margin 0 rem(-12) 0 0
   transition color transition, transform transition
   width button-width
 
