--- a/src/stylus/header.styl
+++ b/src/stylus/header.styl
@@ -1,7 +1,7 @@
 header
   backdrop-filter blur(10px)
   background var(--header-background)
-  color var(--text)
+  color var(--text-1-color)
   grid-area header
   padding 0 env(safe-area-inset-right) 0 env(safe-area-inset-left)
   position sticky
