--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -5,7 +5,7 @@ main
   padding 0 env(safe-area-inset-right) var(--header-height) env(safe-area-inset-left)
 
   a
-    color var(--text)
+    color var(--text-1-color)
     text-decoration underline
     transition opacity transition
 
@@ -14,4 +14,4 @@ main
       opacity .5
 
 [no-js] main
-  color var(--text)
+  color var(--text-1-color)
