--- a/src/stylus/_constants.styl
+++ b/src/stylus/_constants.styl
@@ -1,15 +1,27 @@
-background-dark = #262626
-background-light = #f9f9f9
+// Default light mode colors.
+background-0 = #f2f2f7
+background-1 = #fefffe
+border-color = #c6c6c8
+link-color = #0079fd
+text-1-color = black
 
-grey-dark = #222
+// Dark mode colors.
+background-0-dark = black
+background-1-dark = #1c1c1e
+border-color-dark = #3d3d41
+link-color-dark = #0a84fe
+text-1-color-dark = #fefffe
 
+// Dimensions.
 button-width = rem(44)
 max-width = rem(512)
 menu-arrow = rem(16)
 menu-item-size = rem(32)
 
-transition = .3s ease-out
-
+// Breakpoints.
 breakpoint = {
   medium: 'screen and (min-width: %s)' % rem(640)
 }
+
+// Transitions.
+transition = .3s ease-out
