--- a/src/stylus/body.styl
+++ b/src/stylus/body.styl
@@ -1,6 +1,6 @@
 body
   webfont()
-  background var(--background)
+  background var(--background-0)
   display grid
   grid-template-areas:
     'header'\
