--- a/src/stylus/_constants.styl
+++ b/src/stylus/_constants.styl
@@ -1,12 +1,14 @@
 // Default light mode colors.
 background-0 = #f2f2f7
 background-1 = #fefffe
+border-color = #c6c6c8
 link-color = #0079fd
 text-1-color = black
 
 // Dark mode colors.
 background-0-dark = black
 background-1-dark = #1c1c1e
+border-color-dark = #3d3d41
 link-color-dark = #0a84fe
 text-1-color-dark = #fefffe
 
