--- a/src/stylus/_constants.styl
+++ b/src/stylus/_constants.styl
@@ -1,16 +1,37 @@
-// Default light mode colors.
-background-0 = #f2f2f7
-background-1 = #fefffe
-border-color = #c6c6c8
+// Link colors.
 link-color = #0079fd
+link-color-dark = #0a84fe
+
+// Grays palette.
+// https://developer.apple.com/design/human-interface-guidelines/ios/visual-design/color
+gray-1 = rgb(142, 142, 147)
+gray-2 = rgb(174, 174, 178)
+gray-3 = rgb(199, 199, 204)
+gray-4 = rgb(209, 209, 214)
+gray-5 = rgb(229, 229, 234)
+gray-6 = rgb(242, 242, 247)
+
+gray-1-dark = rgb(142, 142, 147)
+gray-2-dark = rgb(99, 99, 102)
+gray-3-dark = rgb(72, 72, 74)
+gray-4-dark = rgb(58, 58, 60)
+gray-5-dark = rgb(44, 44, 46)
+gray-6-dark = rgb(28, 28, 30)
+
+// Default light mode colors.
+background-0 = gray-6
+background-1 = white
+border-color = gray-4
 text-1-color = black
 
 // Dark mode colors.
 background-0-dark = black
-background-1-dark = #1c1c1e
-border-color-dark = #3d3d41
-link-color-dark = #0a84fe
-text-1-color-dark = #fefffe
+background-1-dark = gray-6-dark
+border-color-dark = gray-4-dark
+text-1-color-dark = gray-5
+
+// Fixed header transparency.
+header-alpha = .33
 
 // Dimensions.
 button-width = rem(44)
