inline properties instead of with mixins, unused code deleted (no-op)

--- a/src/stylus/body.styl
+++ b/src/stylus/body.styl
@@ -1,7 +1,8 @@
 body
-  webfont()
   background var(--background-0)
   display grid
+  font-family 'Avenir Variable', sans-serif
+  font-variation-settings 'wght' 500
   grid-template-areas:
     'header'\
     'main'
