--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -1,8 +1,7 @@
 main
-  align-self center
   grid-area main
-  justify-self center
-  padding 0 env(safe-area-inset-right) var(--header-height) env(safe-area-inset-left)
+  padding 0 env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left)
+  place-self center
 
   a
     color var(--text-1-color)
