--- a/src/js/custom_elements/color_picker/color_picker.styl
+++ b/src/js/custom_elements/color_picker/color_picker.styl
@@ -1,13 +1,14 @@
 color-picker
   position relative
+  right rem(-10)
   z-index 1
 
 color-picker > button
+  border-radius 50%
   color inherit
   cursor pointer
   display flex
-  height var(--header-height)
-  margin 0 rem(-12) 0 0
+  height button-height
   opacity 1
   place-items center
   transition opacity transition, transform transition
@@ -26,6 +27,7 @@ color-picker > button
   > svg
     flex 0 0 rem(20)
     pointer-events none
+    margin auto
 
 color-picker > ul
   &
@@ -42,14 +44,11 @@ color-picker > ul
   opacity 0
   padding rem(12)
   position absolute
-  right rem(-14)
+  right rem(-2)
   transform 'translateY(-%s)' % rem(12)
   transition opacity transition, transform transition, visibility transition
   visibility hidden
   z-index -1
-
-  @media breakpoint.medium
-    margin-top rem(-2)
 
   // Menu arrow via rotated square with a shadow.
   &::before
