--- a/src/stylus/_constants.styl
+++ b/src/stylus/_constants.styl
@@ -30,10 +30,8 @@ background-1-dark = gray-6-dark
 border-color-dark = gray-4-dark
 text-1-color-dark = gray-5
 
-// Fixed header transparency.
-header-alpha = .33
-
 // Dimensions.
+button-height = rem(44)
 button-width = rem(44)
 max-width = rem(512)
 menu-arrow = rem(16)
