--- a/src/stylus/body.styl
+++ b/src/stylus/body.styl
@@ -11,4 +11,5 @@ body
   grid-template-columns 1fr
   grid-template-rows var(--header-height) 1fr var(--header-height)
   min-height calc(var(--vh, 1vh) * 100)
+  overflow hidden
   transition background transition, color transition
