--- a/src/stylus/index.styl
+++ b/src/stylus/index.styl
@@ -4,10 +4,10 @@
 @import 'vars'
 @import 'html'
 @import 'body'
-@import 'header'
 @import 'main'
 @import 'clocks'
 
 @import '../js/custom_elements/analog_clock/analog_clock'
 @import '../js/custom_elements/color_picker/color_picker'
+@import '../js/custom_elements/digital_clock/digital_clock'
 @import '../js/custom_elements/tools/tools'
