--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -1,5 +1,5 @@
 main
-  grid-area main
+  grid-area clocks
   padding 0 env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left)
   place-self center
 
