--- a/src/stylus/clocks.styl
+++ b/src/stylus/clocks.styl
@@ -27,7 +27,7 @@ total = grid_count * grid_count
   display grid
   grid-template-columns 'repeat(%s, 1fr)' % ((grid_count + 1) * interval)
   grid-template-rows 'repeat(%s, 1fr)' % ((grid_count + 1) * interval)
-  margin 5vh 5vw
+  margin 0 rem(16)
   max-width max-width
   overflow hidden
   transition background transition, border transition
