--- a/src/js/custom_elements/color_picker/color_picker.styl
+++ b/src/js/custom_elements/color_picker/color_picker.styl
@@ -1,4 +1,4 @@
-color-picker
+color-picker  
   grid-area color-picker
   place-self center
   position relative
@@ -6,6 +6,7 @@ color-picker
 
 color-picker > button
   border-radius 50%
+  color var(--text-1-color)
   cursor pointer
   display flex
   height button-height
