--- a/src/stylus/vars.styl
+++ b/src/stylus/vars.styl
@@ -1,18 +1,18 @@
 :root
-  --header-font-size rem(16)
-  --header-height rem(48)
+  --font-size rem(16)
 
   @media breakpoint.medium
-    --header-font-size rem(20)
-    --header-height rem(60)
+    --font-size rem(20)
 
   --background-0 background-0
   --background-1 background-1
   --menu-box-shadow elevation(2)
   --text-1-color text-1-color
+  --text-2-color text-2-color
 
   @media (prefers-color-scheme dark)
     --background-0 background-0-dark
     --background-1 background-1-dark
     --menu-box-shadow 0 0 0 1px border-color-dark
     --text-1-color text-1-color-dark
+    --text-2-color text-2-color-dark
