--- a/src/js/custom_elements/digital_clock/digital_clock.styl
+++ b/src/js/custom_elements/digital_clock/digital_clock.styl
@@ -1,4 +1,5 @@
 digital-clock
+  color var(--text-2-color)
   display block
-  font-size var(--header-font-size)
+  font-size var(--font-size)
   place-self center
