--- a/src/stylus/_constants.styl
+++ b/src/stylus/_constants.styl
@@ -1,7 +1,3 @@
-// Link colors.
-link-color = #0079fd
-link-color-dark = #0a84fe
-
 // Grays palette.
 // https://developer.apple.com/design/human-interface-guidelines/ios/visual-design/color
 gray-1 = rgb(142, 142, 147)
@@ -23,12 +19,18 @@ background-0 = gray-6
 background-1 = white
 border-color = gray-4
 text-1-color = black
+text-2-color = gray-3-dark
 
 // Dark mode colors.
 background-0-dark = black
 background-1-dark = gray-6-dark
 border-color-dark = gray-4-dark
 text-1-color-dark = gray-5
+text-2-color-dark = gray-2
+
+// Link colors.
+link-color = #0079fd
+link-color-dark = #0a84fe
 
 // Dimensions.
 button-height = rem(44)
