--- a/src/stylus/body.styl
+++ b/src/stylus/body.styl
@@ -10,6 +10,8 @@ body
     'color-picker'
   grid-template-columns 1fr
   grid-template-rows 1fr auto 1fr
+  margin 0
   min-height calc(var(--vh, 1vh) * 100)
   overflow hidden
+  padding 0 0 env(safe-area-inset-bottom)
   transition background transition, color transition
