--- a/src/stylus/html.styl
+++ b/src/stylus/html.styl
@@ -5,7 +5,6 @@
   src url('https://assets.gauslin.com/fonts/AvenirNext-Variable.woff2') format('woff2')
 
 html
-body
   margin 0
   padding 0
   -webkit-tap-highlight-color transparent
@@ -16,10 +15,7 @@ body
 
 a
   color var(--link-color)
-  text-decoration none
-
-a:focus
-  outline none
+  outline 0
 
 svg
   height auto
