--- a/src/stylus/body.styl
+++ b/src/stylus/body.styl
@@ -5,13 +5,12 @@ body
   font-family 'Avenir Variable', sans-serif
   font-variation-settings 'wght' 500
   grid-template-areas:
-    'digital-clock'\
+    '.'\
     'clocks'\
-    'color-picker'
+    'header'
   grid-template-columns 1fr
-  grid-template-rows 1fr auto 1fr
+  grid-template-rows 1fr auto 3fr
   margin 0
   min-height calc(var(--vh, 1vh) * 100)
-  overflow hidden
   padding 0 0 env(safe-area-inset-bottom)
   transition background transition, color transition
