--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -22,8 +22,9 @@ html(lang="en")
       crossorigin="crossorigin"
     )
   body(no-js no-touch)
-    digital-clock= title
+    header
+      digital-clock= title
+      color-picker
     main
       noscript Please <a href="https://www.enable-javascript.com/" title="How to enable JavaScript in your browser">enable JavaScript</a> to view this app.
-    color-picker
     x-tools
