palette icon replaced with grid of circles

--- a/src/js/custom_elements/color_picker/color_picker.styl
+++ b/src/js/custom_elements/color_picker/color_picker.styl
@@ -23,6 +23,7 @@ color-picker > button
     transform scale(.85)
 
   > svg
+    fill currentColor
     flex 0 0 rem(20)
     margin auto
     pointer-events none
