--- a/src/stylus/_constants.styl
+++ b/src/stylus/_constants.styl
@@ -17,6 +17,7 @@ gray-6-dark = rgb(28, 28, 30)
 // Default light mode colors.
 background-0 = gray-6
 background-1 = white
+background-2 = gray-4
 border-color = gray-4
 text-1-color = black
 text-2-color = gray-3-dark
@@ -24,6 +25,7 @@ text-2-color = gray-3-dark
 // Dark mode colors.
 background-0-dark = black
 background-1-dark = gray-6-dark
+background-2-dark = gray-4-dark
 border-color-dark = gray-4-dark
 text-1-color-dark = gray-5
 text-2-color-dark = gray-2
