--- a/src/stylus/vars.styl
+++ b/src/stylus/vars.styl
@@ -6,6 +6,7 @@
 
   --background-0 background-0
   --background-1 background-1
+  --background-2 background-2
   --menu-box-shadow elevation(2)
   --text-1-color text-1-color
   --text-2-color text-2-color
@@ -13,6 +14,7 @@
   @media (prefers-color-scheme dark)
     --background-0 background-0-dark
     --background-1 background-1-dark
+    --background-2 background-2-dark
     --menu-box-shadow 0 0 0 1px border-color-dark
     --text-1-color text-1-color-dark
     --text-2-color text-2-color-dark
