--- a/src/js/custom_elements/color_picker/color_picker.styl
+++ b/src/js/custom_elements/color_picker/color_picker.styl
@@ -16,6 +16,7 @@ color-picker > button
 
   &:active
   &:focus
+  &[aria-expanded='true']
   [no-touch] &:hover
     background var(--background-2)
 
