--- a/src/stylus/body.styl
+++ b/src/stylus/body.styl
@@ -4,12 +4,10 @@ body
   display grid
   font-family 'Avenir Variable', sans-serif
   font-variation-settings 'wght' 500
-  grid-template-areas:
-    '.'\
-    'clocks'\
-    'header'
-  grid-template-columns 1fr
-  grid-template-rows 1fr auto 3fr
+  grid-template:
+    '......' 1fr \
+    'clocks' auto \
+    'header' 3fr / 1fr
   margin 0
   min-height calc(var(--vh, 1vh) * 100)
   padding 0 0 env(safe-area-inset-bottom)
