--- a/src/js/custom_elements/color_picker/color_picker.styl
+++ b/src/js/custom_elements/color_picker/color_picker.styl
@@ -29,17 +29,14 @@ color-picker > button
     margin auto
     pointer-events none
 
+// [1] Formatting hack to render vanilla CSS function instead of calling
+// built-in Stylus function.
 color-picker > ul
-  &
-  &::before
-    background var(--background-1)
-    box-shadow var(--menu-box-shadow)
-
   border-radius rem(4)
   bottom button-height
   display grid
-  grid-gap rem(8)
-  grid-template-columns repeat(4, 1fr)
+  gap rem(8)
+  grid 'auto-flow / repeat(4, 1fr)' % null  // [1]
   left 50%
   list-style none
   opacity 0
@@ -49,6 +46,11 @@ color-picker > ul
   transition opacity transition, transform transition, visibility transition
   visibility hidden
   z-index -1
+
+  &
+  &::before
+    background var(--background-1)
+    box-shadow var(--menu-box-shadow)
 
   // Menu arrow via rotated square with a drop shadow and clip-path.
   &::before
