--- a/src/stylus/body.styl
+++ b/src/stylus/body.styl
@@ -1,14 +1,16 @@
+// [1] Formatting hack to render vanilla CSS function instead of calling
+// built-in Stylus function.
 body
   background var(--background-0)
   color var(--text-1-color)
   display grid
   font-family 'Avenir Variable', sans-serif
   font-variation-settings 'wght' 500
-  grid-template:
-    '......' 1fr \
-    'clocks' auto \
+  grid:
+    '.' 1fr \
+    'clocks' \
     'header' 3fr / 1fr
   margin 0
-  min-height calc(var(--vh, 1vh) * 100)
+  min-height 'max(var(--vh, 100vh), 100vh)' % null // [1]
   padding 0 0 env(safe-area-inset-bottom)
   transition background transition, color transition
