--- a/src/stylus/html.styl
+++ b/src/stylus/html.styl
@@ -4,14 +4,15 @@
   font-weight 1 999
   src url('https://assets.gauslin.com/fonts/AvenirNext-Variable.woff2') format('woff2')
 
+*
+  box-sizing border-box
+
 html
+  height -webkit-fill-available
   margin 0
   padding 0
   -webkit-tap-highlight-color transparent
   text-size-adjust none
-
-*
-  box-sizing border-box
 
 a
   color var(--link-color)
