--- a/src/js/custom_elements/analog_clock/analog_clock.styl
+++ b/src/js/custom_elements/analog_clock/analog_clock.styl
@@ -1,11 +1,11 @@
 analog-clock
   display block
 
-  line
-    stroke var(--hands)
-    stroke-width 6px // Double the value of the SVG pivot's value.
-    transition stroke transition
+analog-clock line
+  stroke var(--hands)
+  stroke-width 6px // Double the value of the SVG pivot's value.
+  transition stroke transition
 
-  circle
-    fill var(--hands)
-    transition fill transition
+analog-clock circle
+  fill var(--hands)
+  transition fill transition
