css constant refactoring (no-op)

--- a/src/js/custom_elements/analog_clock/analog_clock.styl
+++ b/src/js/custom_elements/analog_clock/analog_clock.styl
@@ -4,8 +4,8 @@ analog-clock
 analog-clock line
   stroke var(--hands)
   stroke-width 6px // Double the value of the SVG pivot's value.
-  transition stroke transition
+  transition stroke TRANSITION
 
 analog-clock circle
   fill var(--hands)
-  transition fill transition
+  transition fill TRANSITION
