--- a/src/stylus/body.styl
+++ b/src/stylus/body.styl
@@ -9,4 +9,4 @@ body
   min-height 100vh
   min-height -webkit-fill-available
   padding 0 0 env(safe-area-inset-bottom)
-  transition background transition, color transition
+  transition background TRANSITION, color TRANSITION
