--- a/src/stylus/header.styl
+++ b/src/stylus/header.styl
@@ -6,8 +6,8 @@ header
   padding rem(16)
   place-self center
 
-  [no-js] &
-    display none
+[no-js] header
+  display none
 
 digital-clock
   margin 0 0 1rem
