--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -7,9 +7,9 @@ main
   grid-area no-js
   padding 1rem
 
-  a
-    transition opacity transition
+[no-js] main a
+  transition opacity transition
 
-    &:hover
-    &:focus
-      opacity .5
+  &:hover
+  &:focus
+    opacity .5
