--- a/src/stylus/_constants.styl
+++ b/src/stylus/_constants.styl
@@ -1,50 +1,46 @@
 // Grays palette.
-// https://developer.apple.com/design/human-interface-guidelines/ios/visual-design/color
-gray-1 = rgb(142, 142, 147)
-gray-2 = rgb(174, 174, 178)
-gray-3 = rgb(199, 199, 204)
-gray-4 = rgb(209, 209, 214)
-gray-5 = rgb(229, 229, 234)
-gray-6 = rgb(242, 242, 247)
+// https://developer.apple.com/design/human_interface_guidelines/ios/visual_design/color
+GRAY_1 = rgb(142, 142, 147)
+GRAY_2 = rgb(174, 174, 178)
+GRAY_3 = rgb(199, 199, 204)
+GRAY_4 = rgb(209, 209, 214)
+GRAY_5 = rgb(229, 229, 234)
+GRAY_6 = rgb(242, 242, 247)
 
-gray-1-dark = rgb(142, 142, 147)
-gray-2-dark = rgb(99, 99, 102)
-gray-3-dark = rgb(72, 72, 74)
-gray-4-dark = rgb(58, 58, 60)
-gray-5-dark = rgb(44, 44, 46)
-gray-6-dark = rgb(28, 28, 30)
+GRAY_1_DARK = rgb(142, 142, 147)
+GRAY_2_DARK = rgb(99, 99, 102)
+GRAY_3_DARK = rgb(72, 72, 74)
+GRAY_4_DARK = rgb(58, 58, 60)
+GRAY_5_DARK = rgb(44, 44, 46)
+GRAY_6_DARK = rgb(28, 28, 30)
 
-// Default light mode colors.
-background-0 = gray-6
-background-1 = white
-background-2 = gray-4
-border-color = gray-4
-text-1-color = black
-text-2-color = gray-3-dark
+// DEFAULT LIGHT MODE COLORS.
+BACKGROUND_0 = GRAY_6
+BACKGROUND_1 = white
+BACKGROUND_2 = GRAY_4
+BORDER_COLOR = GRAY_4
+TEXT_1_COLOR = black
+TEXT_2_COLOR = GRAY_3_DARK
 
 // Dark mode colors.
-background-0-dark = black
-background-1-dark = gray-6-dark
-background-2-dark = gray-4-dark
-border-color-dark = gray-4-dark
-text-1-color-dark = gray-5
-text-2-color-dark = gray-2
-
-// Link colors.
-link-color = #0079fd
-link-color-dark = #0a84fe
+BACKGROUND_0_DARK = black
+BACKGROUND_1_DARK = GRAY_6_DARK
+BACKGROUND_2_DARK = GRAY_4_DARK
+BORDER_COLOR_DARK = GRAY_4_DARK
+TEXT_1_COLOR_DARK = GRAY_5
+TEXT_2_COLOR_DARK = GRAY_2
 
 // Dimensions.
-button-height = rem(44)
-button-width = rem(44)
-max-width = rem(512)
-menu-arrow = rem(16)
-menu-item-size = rem(32)
-
-// Breakpoints.
-breakpoint = {
-  medium: 'screen and (min-width: %s)' % rem(640)
-}
+BUTTON_HEIGHT = rem(44)
+BUTTON_WIDTH = rem(44)
+MAX_WIDTH = rem(512)
+MENU_ARROW = rem(16)
+MENU_ITEM_SIZE = rem(32)
 
 // Transitions.
-transition = .3s ease-out
+TRANSITION = .3s ease-out
+
+// Breakpoints.
+Breakpoint = {
+  MEDIUM: 'screen and (min_width: %s)' % rem(640)
+}
