--- a/src/stylus/html.styl
+++ b/src/stylus/html.styl
@@ -29,8 +29,8 @@ svg path
 
 // Remove all default styles from form elements.
 button
-[type=checkbox]
-[type=radio]
+[type='checkbox']
+[type='radio']
   appearance none
   background none
   border 0
