css, html for header-clocks-picker layout

--- a/src/stylus/clocks.styl
+++ b/src/stylus/clocks.styl
@@ -30,6 +30,7 @@ grid_template = (grid_count + 1) * interval
   margin 0 rem(16)
   max-width MAX_WIDTH
   overflow hidden
+  place-self center
   transition background TRANSITION, border TRANSITION
 
 row = 0
