html, css updates for new header

--- a/src/stylus/_constants.styl
+++ b/src/stylus/_constants.styl
@@ -42,5 +42,5 @@ TRANSITION = .3s ease-out
 
 // Breakpoints.
 Breakpoint = {
-  MEDIUM: 'screen and (min_width: %s)' % rem(640)
+  MEDIUM: 'screen and (min-width: %s)' % rem(640)
 }
