--- a/src/stylus/header.styl
+++ b/src/stylus/header.styl
@@ -2,6 +2,15 @@ header
   align-items center
   display flex
   grid-area header
+  height var(--header-height) 
+  justify-content center
+
+header h1
+  font-size var(--header-font-size)
+  line-height 1
+  margin 0
+  white-space nowrap
 
 [no-js] header
   display none
+
