--- a/src/stylus/vars.styl
+++ b/src/stylus/vars.styl
@@ -2,14 +2,14 @@ body
   --background-0 BACKGROUND_0
   --background-1 BACKGROUND_1
   --background-2 BACKGROUND_2
-  --font-size rem(14)
   --grid:
-    'header' var(--header-height) \
+    'header' \
     '.' 1fr \
-    'clocks' auto \
+    'clocks' \
     '.' 1fr \
-    'picker' auto \
+    'picker' \
     '.' 1fr / 1fr
+  --header-font-size rem(16)
   --header-height rem(48)
   --menu-box-shadow elevation(2)
   --text-1-color TEXT_1_COLOR
@@ -26,7 +26,7 @@ body
 
 @media Breakpoint.MEDIUM
   body
-    --font-size rem(16)
+    --header-font-size rem(20)
     --header-height rem(60)
 
 [no-js] 
