updated header to match other web apps

--- a/src/js/custom_elements/color_picker/color_picker.styl
+++ b/src/js/custom_elements/color_picker/color_picker.styl
@@ -7,7 +7,7 @@ color-picker
 color-picker > button
   background var(--background-1)
   border-radius 50%
-  color var(--text-2-color)
+  color var(--secondary-text-color)
   cursor pointer
   display flex
   height BUTTON_HEIGHT
