--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -1,9 +1,9 @@
 main
-  grid-area clocks
+  grid-area main
   place-self center
 
 [no-js] main
-  color var(--text-1-color)
+  color var(--primary-text-color)
   grid-area no-js
   padding 1rem
 
