--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -21,8 +21,9 @@ html(lang="en")
     )
   body(no-js no-touch)
     header
-      h1
-        digital-clock= title
+      div
+        h1= title
+        digital-clock
     main
       noscript Please <a href="https://www.enable-javascript.com/" title="How to enable JavaScript in your browser">enable JavaScript</a> to view this app.
     color-picker
