--- a/src/stylus/_constants.styl
+++ b/src/stylus/_constants.styl
@@ -19,16 +19,27 @@ BACKGROUND_0 = GRAY_6
 BACKGROUND_1 = white
 BACKGROUND_2 = GRAY_4
 BORDER_COLOR = GRAY_4
-TEXT_1_COLOR = black
-TEXT_2_COLOR = GRAY_3_DARK
+TEXT_PRIMARY_COLOR = black
+TEXT_SECONDARY_COLOR = GRAY_3_DARK
 
 // Dark mode colors.
 BACKGROUND_0_DARK = black
 BACKGROUND_1_DARK = GRAY_6_DARK
 BACKGROUND_2_DARK = GRAY_4_DARK
 BORDER_COLOR_DARK = GRAY_4_DARK
-TEXT_1_COLOR_DARK = GRAY_5
-TEXT_2_COLOR_DARK = GRAY_2
+TEXT_PRIMARY_COLOR_DARK = GRAY_5
+TEXT_SECONDARY_COLOR_DARK = GRAY_2
+
+// Blurry backgrounds.
+BACKDROP_EFFECT = blur(10px)
+
+// Header background with no backdrop_filter support.
+HEADER_BACKGROUND = rgba(white, .95)
+HEADER_BACKGROUND_DARK = rgba(black, .95)
+
+// Header background with blur effect.
+HEADER_BACKDROP_BACKGROUND = rgba(white, .65)
+HEADER_BACKDROP_BACKGROUND_DARK = rgba(GRAY_6_DARK, .65)
 
 // Dimensions.
 BUTTON_HEIGHT = rem(44)
