--- a/src/stylus/body.styl
+++ b/src/stylus/body.styl
@@ -1,10 +1,10 @@
 body
   background var(--background-0)
-  color var(--text-1-color)
+  color var(--primary-text-color)
   display grid
   font-family 'Avenir Variable', sans-serif
   font-variation-settings 'wght' 500
-  grid var(--grid)
+  grid var(--body-grid)
   margin 0
   min-height 100vh
   min-height -webkit-fill-available
