simpler body grid

--- a/src/stylus/vars.styl
+++ b/src/stylus/vars.styl
@@ -3,12 +3,9 @@ body
   --background-1 BACKGROUND_1
   --background-2 BACKGROUND_2
   --body-grid:
-    'header' \
-    '.' 1fr \
-    'main' \
-    '.' 1fr \
-    'picker' \
-    '.' 1fr / 1fr
+    'header' var(--header-height) \
+    'main' 7fr \
+    'picker' 2fr / 1fr
   --header-backdrop-background HEADER_BACKDROP_BACKGROUND
   --header-background HEADER_BACKGROUND
   --header-font-size rem(16)
