Squashed commit of the following:
commit 46b475dce6b382500a31d8d2b5a92c02f21ff437
Author: Ben Gauslin <github@gauslin.com>
Date:   Tue Oct 11 13:46:09 2022 -0500

    zen mode click handling wired up

commit 2d2082261813da40f7ed341f189880464e7faa24
Author: Ben Gauslin <github@gauslin.com>
Date:   Tue Oct 11 12:05:11 2022 -0500

    settings button rendering via prop

commit 35affeeb24bf48e14ec3ab57206842bf816fc099
Author: Ben Gauslin <github@gauslin.com>
Date:   Tue Oct 11 12:00:58 2022 -0500

    adds when() to settings template since data comes from app now

commit 65b4ad21572476dd3e7aa983e5301039f99e114e
Author: Ben Gauslin <github@gauslin.com>
Date:   Tue Oct 11 11:59:50 2022 -0500

    app template var updates (no-op)

commit e226bcc34bf16676bb15909c639ceda3ee2bfec8
Author: Ben Gauslin <github@gauslin.com>
Date:   Tue Oct 11 11:52:35 2022 -0500

    fixes/updates settings items layout

commit ef94008c6379055a565a42b023572977d1ee3a3e
Author: Ben Gauslin <github@gauslin.com>
Date:   Tue Oct 11 09:20:03 2022 -0500

    Settings interface via new shared.ts file

commit 5336d899312a64d267749ed32d7457526a739fa4
Author: Ben Gauslin <github@gauslin.com>
Date:   Tue Oct 11 09:19:10 2022 -0500

    max-block-size fix for faces (oops)

commit 2e37c147e4998239970d935858e161663519732a
Author: Ben Gauslin <github@gauslin.com>
Date:   Tue Oct 11 08:10:42 2022 -0500

    initial layout and data updates for zen mode

    ...but it doesn't do anything yet

--- a/src/js/components/faces/faces.scss
+++ b/src/js/components/faces/faces.scss
@@ -1,4 +1,5 @@
 @use 'sass:math';
+@use '../../../styles/const';
 @use '../../../styles/utils';
 
 $grid: 3;
@@ -55,10 +56,10 @@ $total-cells: ($grid * $clock-cells) + $clock-cells;
 // Start encapsulated styles.
 :host {
   aspect-ratio: 1;
-  max-block-size: calc(100vh - 10rem);
+  max-block-size: calc(100vh - #{const.$app-gap-max});
 
-  @supports (max-block-size: calc(100dvh - 10rem)) {
-    max-block-size: calc(100dvh - 10rem);
+  @supports (max-block-size: calc(100dvh - #{const.$app-gap-max})) {
+    max-block-size: calc(100dvh - #{const.$app-gap-max});
   }
 }
 
