--- a/src/styles/_const.scss
+++ b/src/styles/_const.scss
@@ -1,3 +1,7 @@
+// Shared dimensions.
+$app-gap-min: 5rem;
+$app-gap-max: 10rem;
+
 /// Color palettes via Apple Developers Human Interface Guidelines.
 /// @see https://developer.apple.com/design/human-interface-guidelines/foundations/color#specifications
 
