--- a/src/js/components/app/app.scss
+++ b/src/js/components/app/app.scss
@@ -6,7 +6,10 @@
   display: grid;
   font-family: 'Avenir Variable', sans-serif;
   font-variation-settings: 'wght' 500;
-  grid: '.' minmax(3rem, 1fr) 'faces' 'theme' minmax(7rem, 1fr) / 1fr;
+  grid:
+    '.' minmax(#{const.$app-gap-min}, #{const.$app-gap-max})
+    'faces'
+    'settings' minmax(#{const.$app-gap-min}, #{const.$app-gap-max}) / 1fr;
   place-items: center;
   
   @supports (block-size: 100dvh) {
@@ -23,7 +26,7 @@ clock-faces {
 }
 
 clock-settings {
-  grid-area: theme;
+  grid-area: settings;
 }
 
 // Hands colors don't change between light and dark mode, but second hands
